[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/sprites/HUD/container.png" type="Texture" id=1]
[ext_resource path="res://src/scripts/hud/Minimap.gd" type="Script" id=2]
[ext_resource path="res://src/scripts/others/CircleArcPolygon.gd" type="Script" id=3]

[node name="Minimap" type="MarginContainer"]
margin_right = 246.0
margin_bottom = 142.0
custom_constants/margin_top = 16
custom_constants/margin_left = 16
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="."]
modulate = Color( 1, 1, 1, 0.784314 )
margin_left = 16.0
margin_top = 16.0
margin_right = 246.0
margin_bottom = 142.0
texture = ExtResource( 1 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 246.0
margin_bottom = 142.0
custom_constants/margin_right = 3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SightContainer" type="ViewportContainer" parent="Margin"]
self_modulate = Color( 1, 1, 1, 0.333333 )
margin_left = 3.0
margin_top = 3.0
margin_right = 227.0
margin_bottom = 123.0
rect_clip_content = true
stretch = true

[node name="SightViewport" type="Viewport" parent="Margin/SightContainer"]
size = Vector2( 224, 120 )
transparent_bg = true
handle_input_locally = false
disable_3d = true
usage = 0
render_target_update_mode = 3

[node name="SightIndicator" type="Node2D" parent="Margin/SightContainer"]
visible = false
position = Vector2( -19, -19 )
script = ExtResource( 3 )
angle_to = 360
color = Color( 0.372549, 0.647059, 0.819608, 1 )

[node name="ObjectiveMarkerContainer" type="Control" parent="Margin"]
margin_left = 3.0
margin_top = 3.0
margin_right = 227.0
margin_bottom = 123.0

[node name="ObjectiveMarker" type="ColorRect" parent="Margin/ObjectiveMarkerContainer"]
visible = false
margin_right = 10.0
margin_bottom = 10.0
rect_rotation = 45.0
rect_pivot_offset = Vector2( 5, 5 )
color = Color( 0.662745, 0.203922, 0.847059, 0.741176 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerMarkerContainer" type="Control" parent="Margin"]
margin_left = 3.0
margin_top = 3.0
margin_right = 227.0
margin_bottom = 123.0

[node name="PlayerMarker" type="ColorRect" parent="Margin/PlayerMarkerContainer"]
visible = false
margin_right = 6.0
margin_bottom = 6.0
color = Color( 0.196078, 0.541176, 0.662745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AllyMarker" type="ColorRect" parent="Margin/PlayerMarkerContainer"]
visible = false
margin_right = 6.0
margin_bottom = 6.0
color = Color( 0.133333, 0.717647, 0.419608, 1 )

[node name="EnemyMarker" type="ColorRect" parent="Margin/PlayerMarkerContainer"]
visible = false
margin_right = 6.0
margin_bottom = 6.0
color = Color( 0.92549, 0.490196, 0.337255, 1 )
